...
                        <viewControllerLayoutGuide type="bottom" id="Zur-6o-LNw"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="58p-4E-R0H">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Recipe title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="glj-KL-KeC">
                                <rect key="frame" x="20" y="96" width="560" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Recipe ingredients" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fxB-2s-Ssp">
                                <rect key="frame" x="20" y="140" width="560" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Recipe steps" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QTa-RD-fpg">
                                <rect key="frame" x="20" y="184" width="560" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sushi" translatesAutoresizingMaskIntoConstraints="NO" id="sDW-4L-xsB">
                                <rect key="frame" x="213" y="257" width="175" height="175"/>
...
                                    <constraint firstAttribute="width" constant="175" id="jCL-wO-JHT"/>
                                    <constraint firstAttribute="height" constant="175" id="ooS-gY-Grt"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HD0-fu-7IJ">
                                <rect key="frame" x="213" y="257" width="175" height="175"/>
                                <state key="normal" title="ADD IMAGE">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="addImage:" destination="0Al-h8-Zgy" eventType="touchUpInside" id="V7d-bX-7ez"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Lo-Uf-jbK">
                                <rect key="frame" x="252" y="471" width="97" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="E2r-Oz-Ksc"/>
                                    <constraint firstAttribute="width" constant="97" id="Rgw-ZB-Jgn"/>
                                </constraints>
                                <state key="normal" title="Create Recipe"/>
                                <connections>
                                    <action selector="createRecipe:" destination="0Al-h8-Zgy" eventType="touchUpInside" id="m8k-5V-A3N"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
